--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Geo Location con API</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
 	
@@ -27,6 +27,6 @@
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlimTJ0KMDtm8gLtzRDQNbdFOkVBiUGiw&callback=initMap"
  type="text/javascript"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
