--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Geo Location con API</title>
-	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600" rel="stylesheet">
+		<title>Easy Vreco</title>
+	<link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
@@ -13,7 +13,20 @@
 	<section>
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<button id="encuentrame">Ecuéntrame</button>
+				<div class="col-md-3">
+					<button id="encuentrame">Encuéntrame</button>
+				</div>
+				<div class="col-md-3 alinear">
+					<label for="origen">Origen</label>
+					<input type="text" name="origen" placeholder="Introduce una ubicación">
+				</div>
+				<div class="col-md-3 alinear">
+					<label for="destino">Destino</label>
+					<input type="text" name="destino" placeholder="Introduce una ubicación">
+				</div>
+				<div class="col-md-3">
+					<button id="ruta">Ruta</button>
+				</div>
 			</div>
 		</div>
 		<div class="row">
