--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
 				</div>
 				<div class="col-md-3 alinear">
 					<label for="origen">Origen</label>
-					<input type="text" name="origen" placeholder="Introduce una ubicación">
+					<input type="text" name="origen" id="salida" placeholder="Introduce una ubicación">
 				</div>
 				<div class="col-md-3 alinear">
 					<label for="destino">Destino</label>
-					<input type="text" name="destino" placeholder="Introduce una ubicación">
+					<input type="text" name="destino" id="fin" placeholder="Introduce una ubicación">
 				</div>
 				<div class="col-md-3">
 					<button id="ruta">Ruta</button>
 				</div>
 			</div>
 		</div>
+
 		<div class="row">
-			<div class="col-md-12 col-sm-12" id="map">
+			<div id="cont-map">
+				<div class="col-md-12 col-sm-12" id="map">
 				<!-- Aqui va el mapa -->
+			</div>
 		</div>
 	</section>	
 	
