--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				</div>
 				<div class="col-md-3 alinear">
 					<label for="origen">Origen</label>
-					<input type="text" name="origen" id="salida" placeholder="Introduce una ubicación">
+					<input type="text" name="origen" id="origen" placeholder="Introduce una ubicación">
 				</div>
 				<div class="col-md-3 alinear">
 					<label for="destino">Destino</label>
-					<input type="text" name="destino" id="fin" placeholder="Introduce una ubicación">
+					<input type="text" name="destino" id="destino" placeholder="Introduce una ubicación">
 				</div>
 				<div class="col-md-3">
 					<button id="ruta">Ruta</button>
