--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 			</div>
 		</div>
 	</section>	
-	
 
 <!-- archivos de javascript -->
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlimTJ0KMDtm8gLtzRDQNbdFOkVBiUGiw&callback=initMap"
- type="text/javascript"></script>
+
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlimTJ0KMDtm8gLtzRDQNbdFOkVBiUGiw&libraries=places&callback=initMap"
+        async defer></script>
+
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/app.js"></script>
 </body>
