--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 </head>
 <body>
 	
-	<section>
+	<section class="container-fluid">
 		<div class="row">
-			<div class="col-md-12 col-sm-12">
+			<div class="col-md-12 col-xs-12">
 				<div class="col-md-3">
 					<button id="encuentrame">Encuéntrame</button>
 				</div>
-				<div class="col-md-3 alinear">
-					<label for="origen">Origen</label>
-					<input type="text" name="origen" id="origen" placeholder="Introduce una ubicación">
-				</div>
-				<div class="col-md-3 alinear">
-					<label for="destino">Destino</label>
-					<input type="text" name="destino" id="destino" placeholder="Introduce una ubicación">
-				</div>
-				<div class="col-md-3">
+				<form >
+					<div class="col-md-3 col-xs-12 alinear">
+						<label for="origen">Origen</label>
+						<input type="text" name="origen" id="origen" placeholder="Introduce una ubicación">
+					</div>
+					<div class="col-md-3 col-xs-12 alinear">
+						<label for="destino">Destino</label>
+						<input type="text" name="destino" id="destino" placeholder="Introduce una ubicación">
+					</div>
+				</form>
+				<div class="col-md-3 col-xs-12">
 					<button id="ruta">Ruta</button>
 				</div>
 			</div>
@@ -32,8 +34,9 @@
 
 		<div class="row">
 			<div id="cont-map">
-				<div class="col-md-12 col-sm-12" id="map">
+				<div class="col-md-12 col-xs-12" id="map">
 				<!-- Aqui va el mapa -->
+				</div>
 			</div>
 		</div>
 	</section>	
@@ -42,6 +45,7 @@
 
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlimTJ0KMDtm8gLtzRDQNbdFOkVBiUGiw&libraries=places&callback=initMap"
         async defer></script>
+
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/app.js"></script>
