no funciona TOT

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="col-md-3">
 					<button id="encuentrame">Encuéntrame</button>
 				</div>
-				<form >
+				<form sear>
 					<div class="col-md-3 col-xs-12 alinear">
 						<label for="origen">Origen</label>
 						<input type="text" name="origen" id="origen" placeholder="Introduce una ubicación">
